// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`euiTitle mixin returns a static object of title font properties for each title size l 1`] = `
Object {
  "color": "#1a1c21",
  "fontSize": "2.4286rem",
  "fontWeight": 700,
  "lineHeight": "2.8571rem",
}
`;

exports[`euiTitle mixin returns a static object of title font properties for each title size m 1`] = `
Object {
  "color": "#1a1c21",
  "fontSize": "1.9286rem",
  "fontWeight": 700,
  "lineHeight": "2.2857rem",
}
`;

exports[`euiTitle mixin returns a static object of title font properties for each title size s 1`] = `
Object {
  "color": "#1a1c21",
  "fontSize": "1.5714rem",
  "fontWeight": 700,
  "lineHeight": "1.7143rem",
}
`;

exports[`euiTitle mixin returns a static object of title font properties for each title size xs 1`] = `
Object {
  "color": "#1a1c21",
  "fontSize": "1.1429rem",
  "fontWeight": 700,
  "lineHeight": "1.7143rem",
}
`;

exports[`euiTitle mixin returns a static object of title font properties for each title size xxs 1`] = `
Object {
  "color": "#1a1c21",
  "fontSize": "1.0000rem",
  "fontWeight": 700,
  "lineHeight": "1.4286rem",
}
`;

exports[`euiTitle mixin returns a static object of title font properties for each title size xxxs 1`] = `
Object {
  "color": "#1a1c21",
  "fontSize": "0.8571rem",
  "fontWeight": 700,
  "lineHeight": "1.1429rem",
}
`;
